<resources>
    <string name="app_name">food</string>
    <string name="enter_email">Enter Email</string>
    <string name="todo">TODO</string>
    <string name="enter_password">Enter Password</string>
    <string name="show_password">Show Password</string>
    <string name="forget">Forget Password?</string>
    <string name="login">Login</string>
    <string name="newUser">Not have an account ? Register.</string>
    <string name="signup">REGISTER</string>
    <string name="full_name">Name</string>
    <string name="full_password">Password</string>
    <string name="email">E-mail</string>
    <string name="mobile">Mobile Number</string>
    <string name="submit">SUBMIT</string>
    <string name="already_user">Already User ?</string>
    <string name="registered_emailid">Forget Password?</string>
    <string name="back">back</string>
    <string name="sign_up">Register</string>
    <string name="reset_email">Enter Registered Email.</string>
    <string name="Reset">Reset</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="forget_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_back">Back</string>
    <string name="btnsign_out">Sign out</string>
    <string name="welcome">Giving is not just about making a donation.\nIts about making a difference.</string>
    <string name="txtMain">Welcome</string>
    <string name="title_activity_nav_home">NavHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_welcome">Welcome to Food Donation application</string>
    <string name="profile_text">This the profile page of your old donations.</string>
    <string name="myDonations">Your donation history.</string>
    <string name="headingDonate">Donate</string>
    <string name="address_detail">Address</string>
    <string name="food_item">Food Items</string>
    <string name="food_Qty">Food Quantity</string>
    <string name="headAboutus">About us</string>
    <string name="heading_contact">Contact</string>
    <string name="heading_logout">logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="phone_no">Phone Number</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_home">Home</string>
    <string name="profile">Profile</string>
    <string name="nav_myDonations">My Donations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="usr_profile">Profile Details</string>
    <string name="share_excess">Share Exccess Food</string>
    <string name="cook_date_time">Cooked Date and Time</string>
    <string name="abtus">About Us</string>
    <string name="my_donation">My Donation</string>
</resources>
