<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headingDonate"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:textColor="#ffcc22"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/address_detail"
            android:textSize="20sp"
            android:gravity="start"
            android:textColor="#ffcc22"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_marginTop="190dp" />


        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_detail"
            android:id="@+id/edit_text1"
            android:layout_marginTop="220dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColorHint="#000000"
            android:padding="50dp"
            android:textDirection="ltr"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/share_excess"
            android:textSize="20sp"
            android:gravity="start"
            android:textColor="#ffcc22"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_below="@+id/edit_text1" />


        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/food_item"
            android:id="@+id/edit_text2"
            android:layout_marginTop="420dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColorHint="#000000"
            android:padding="10dp"
            android:inputType="text"
            android:textDirection="ltr"
            android:textSize="20sp" />


        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/food_Qty"
            android:id="@+id/edit_text3"
            android:inputType="numberDecimal"
            android:layout_below="@id/edit_text2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColorHint="#000000"
            android:padding="10dp"
            android:textDirection="ltr"
            android:textSize="20sp" />


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/cook_date_time"
            android:textSize="20sp"
            android:textColor="#ffcc22"
            android:fontFamily="monospace"
            android:layout_below="@id/edit_text3"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_date"
            android:hint="date and time"
            android:textSize="20sp"
            android:textColorHint="#000000"
            android:layout_below="@+id/edit_text3"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:inputType="datetime"/>


        <Button
            android:id="@+id/btn_donate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#000000"
            android:layout_below="@id/edit_date"
            android:layout_marginStart="125dp"
            android:layout_marginTop="10dp"
            android:background="#ffcc22"/>


    </RelativeLayout>


</FrameLayout>