<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#ffcc22" />

    <ScrollView
        android:id="@+id/scrollView_account"
        android:layout_width="match_parent"
        android:layout_height="529dp"
        android:layout_below="@+id/view"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="529dp">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layoutDirection="locale"
                android:text="@string/usr_profile"
                android:textColor="#000000"
                android:textSize="30sp"
                android:layout_centerHorizontal="true" />


            <EditText
                android:id="@+id/name_profile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_marginTop="43dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textColorHint="#000000"
                android:textSize="20sp" />

            <EditText
            android:id="@+id/edit_mobile"
            android:inputType="phone"
            android:hint="@string/phone_no"
            android:textColorHint="#000000"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="35dp"
            android:textSize="20sp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_profile"/>


            <EditText
                android:id="@+id/edit_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="#000000"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="35dp"
                android:textSize="20sp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_mobile"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_email"
                android:layout_marginTop="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/submit"
                android:textSize="20sp"/>


        </RelativeLayout>

    </ScrollView>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_profile"
        android:layout_marginTop="38dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="4dp"/>

</RelativeLayout>